automatisation de la bascule en mode batch

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -20,19 +20,19 @@ cronmanagerId = "001"
 ////////////////////////////////////////////////////
 
 // Chargement de IN ZTE DATA PREPAID
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DATA",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_DATA",
+//    cron = "0 */5 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE VOICE SMS PREPAID
 crontasks +=
@@ -50,19 +50,19 @@ crontasks +=
   }
 
 // Chargement de IN ZTE SUBSCRIPTION
-crontasks +=
-  {
-    instanceId = "LOAD_IT_SUBSCRIPTION",
-    cron = "0 */10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-subscription.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_SUBSCRIPTION",
+//    cron = "0 */10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-subscription.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "50 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE DATA_POST
 crontasks +=
@@ -158,19 +158,19 @@ crontasks +=
   }
 
 // Chargement de IN ZTE PROFILE
-crontasks +=
-  {
-    instanceId = "LOAD_IT_PROFILE",
-    cron = "0 */10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-profile.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_PROFILE",
+//    cron = "0 */10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-profile.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement de IN ZTE RECHARGE
@@ -210,222 +210,222 @@ crontasks +=
 ////////////////////////////////////////////////////
 
 // Chargement de IN ZTE CHECK FILES HORAIRES
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_CHECK_FILE",
-    cron = "0 */10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_CHECK_FILE",
+//    cron = "0 */10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE CHECK FILES ALL
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_CHECK_FILE_ALL",
-    cron = "0 5-59/10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file_all.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_CHECK_FILE_ALL",
+//    cron = "0 5-59/10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-check_file_all.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 /////////////////////////////////////////////////////
 //                 EXTRACT IN                      //
 ////////////////////////////////////////////////////
 
 // Chargement de IN ZTE EXTRACT PROD SPEC
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_PROD_SPEC_EXTRACT",
-    cron = "55 */30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_PROD_SPEC_EXTRACT",
+//    cron = "55 */30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-spec-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT PRICE PLAN
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_PRICE_PLAN_EXTRACT",
-    cron = "55 5-59/30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_PRICE_PLAN_EXTRACT",
+//    cron = "55 5-59/30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-price-plan-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT ACC NBR
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_ACC_NBR_EXTRACT",
-    cron = "55 */10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acc-nbr-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_ACC_NBR_EXTRACT",
+//    cron = "55 */10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acc-nbr-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT ACCT
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_ACCT_EXTRACT",
-    cron = "55 15-59/10 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acct-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_ACCT_EXTRACT",
+//    cron = "55 15-59/10 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-acct-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT BAL
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_BAL_EXTRACT",
-    cron = "55 20-59/30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_BAL_EXTRACT",
+//    cron = "55 20-59/30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT CUST
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_CUST_EXTRACT",
-    cron = "55 25-59/30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-cust-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_CUST_EXTRACT",
+//    cron = "55 25-59/30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-cust-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT PROD
- crontasks +=
-   {
-     instanceId = "LOAD_IT_ZTE_PROD_EXTRACT",
-     cron = "55 */30 * * * ?",
-     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf",
-     taskType = "HIVE"
-     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-     ]
-   }
+// crontasks +=
+//   {
+//     instanceId = "LOAD_IT_ZTE_PROD_EXTRACT",
+//     cron = "55 */30 * * * ?",
+//     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-prod-extract.conf",
+//     taskType = "HIVE"
+//     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//     ]
+//   }
 
 // Chargement de IN ZTE EXTRACT SUBS
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_SUBS_EXTRACT",
-    cron = "55 5-59/30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-subs-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_SUBS_EXTRACT",
+//    cron = "55 5-59/30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-subs-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT IPP
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_IPP_EXTRACT",
-    cron = "35 5-59/30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-ipp-extract.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_IPP_EXTRACT",
+//    cron = "35 5-59/30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-ipp-extract.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de IN ZTE EXTRACT BAL_SNAP
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_BAL_SNAP",
-    cron = "55 10-59/30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-snap.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_BAL_SNAP",
+//    cron = "55 10-59/30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-bal-snap.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement de IN ZTE EXTRACT DEL_EXPBAL
-crontasks +=
-  {
-    instanceId = "LOAD_IT_ZTE_DEL_EXPBAL",
-    cron = "55 15-59/30 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-del-expbal.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_ZTE_DEL_EXPBAL",
+//    cron = "55 15-59/30 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-zte-del-expbal.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 /////////////////////////////////////////////////////
 //                   CDR   MSC                    //
 ////////////////////////////////////////////////////
 
 // Chargement de IT MSC
-crontasks +=
-  {
-    instanceId = "LOAD_IT_CRA_MSC_HUAWEI",
-    cron = "0 */15 * * * ?",
-    configFile = "/PROD/CONF/MSC/load-it-cra-msc-huawei.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "120 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
- }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_CRA_MSC_HUAWEI",
+//    cron = "0 */15 * * * ?",
+//    configFile = "/PROD/CONF/MSC/load-it-cra-msc-huawei.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "120 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+// }
 
 
 
@@ -655,19 +655,19 @@ crontasks +=
 //--###**************************************#####---
 // Chargement de IT-SMSC-MVAS-A2P
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_SMSC_MVAS_A2P",
-    cron = "30 */20 * * * ?",
-    configFile = "/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "100 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_SMSC_MVAS_A2P",
+//    cron = "30 */20 * * * ?",
+//    configFile = "/PROD/CONF/MVAS/load-it-smsc-mvas-a2p.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "100 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //--###**************************************#####---
 //--###        CHARGEMENT OTARIE
