--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -51,36 +51,36 @@ crontasks +=
 
 
 // Chargement FT IN ZTE DATA
-crontasks +=
-  {
-    instanceId = "LOAD_FT_DATA",
-    cron = "0 2 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_DATA",
+//    cron = "0 2 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-data.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
 // Chargement FT IN ZTE SUBCRIPTION
-crontasks +=
-  {
-    instanceId = "LOAD_FT_SUBSCRIPTION",
-    cron = "0 3 */1 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_SUBSCRIPTION",
+//    cron = "0 3 */1 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement FT IN ZTE EMERGENCY DATA
@@ -196,19 +196,19 @@ crontasks +=
 
 
 // FT A MVAS
-crontasks +=
-  {
-    instanceId = "LOAD_FT_QOS_SPECIAL_NUMBER",
-    cron = "0 11 */1 * * ?",
-    configFile = "/PROD/CONF/MVAS/load-ft-qos-special-number.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_QOS_SPECIAL_NUMBER",
+//    cron = "0 11 */1 * * ?",
+//    configFile = "/PROD/CONF/MVAS/load-ft-qos-special-number.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "60 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //--###**************************************#####---
 //--###        CALCULS OTARIE
@@ -595,95 +595,95 @@ crontasks +=
 //--###        CHARGEMENT & CALCULS MSC
 //--###**************************************#####---
 // Chargement de FT AG INTERCO
-crontasks +=
-  {
-    instanceId = "LOAD_FT_AG_INTERCO",
-    cron = "0 34 */1 * * ?",
-    configFile = "/PROD/CONF/MSC/load-ft-ag-interco.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_AG_INTERCO",
+//    cron = "0 34 */1 * * ?",
+//    configFile = "/PROD/CONF/MSC/load-ft-ag-interco.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de FT MSC TRANSACTION
-crontasks +=
-  {
-    instanceId = "LOAD_FT_MSC_TRANSACTION",
-    cron = "0 35 */1 * * ?",
-    configFile = "/PROD/CONF/MSC/load-ft-msc-transaction.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_MSC_TRANSACTION",
+//    cron = "0 35 */1 * * ?",
+//    configFile = "/PROD/CONF/MSC/load-ft-msc-transaction.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 // Chargement de FT X INTERCO
-crontasks +=
-  {
-    instanceId = "LOAD_FT_X_INTERCO_FINAL",
-    cron = "0 36 */1 * * ?",
-    configFile = "/PROD/CONF/MSC/load-ft-x-interco-final.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_X_INTERCO_FINAL",
+//    cron = "0 36 */1 * * ?",
+//    configFile = "/PROD/CONF/MSC/load-ft-x-interco-final.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 // Chargement FT IN ZTE CONTRACT_SNAPSHOT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT",
-    cron = "0 10/20 0-4 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE CONTRACT_SNAPSHOT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT2",
-    cron = "0 10/10 5-8 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot2.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-// Chargement FT IN ZTE CONTRACT_SNAPSHOT
-crontasks +=
-  {
-    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT3",
-    cron = "0 10/20 9-23 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot3.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT",
+//    cron = "0 10/20 0-4 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE CONTRACT_SNAPSHOT
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT2",
+//    cron = "0 10/10 5-8 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot2.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//// Chargement FT IN ZTE CONTRACT_SNAPSHOT
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_CONTRACT_SNAPSHOT3",
+//    cron = "0 10/20 9-23 * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot3.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
