--- a/PROD/CONF/compute-kpi-in-cron-tasks.conf
+++ b/PROD/CONF/compute-kpi-in-cron-tasks.conf
@@ -20,49 +20,49 @@ cronmanagerId = "008"
 //--###**************************************#####---
 
 // Chargement FT IN ZTE VOICE_SMS
-crontasks +=
-  {
-    instanceId = "LOAD_FT_COMMERCIAL_SUBSCRIB_SUMMARY",
-    cron = "0 10/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-commercial-subscrib-summary.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_COMMERCIAL_SUBSCRIB_SUMMARY",
+//    cron = "0 10/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-commercial-subscrib-summary.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_GROUP_SUBSCRIBER_SUMMARY",
-    cron = "0 10/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-group-subscriber-summary.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-crontasks +=
-  {
-    instanceId = "LOAD_FT_A_SUBSCRIBER_SUMMARY",
-    cron = "0 10/20 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscriber-summary.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_GROUP_SUBSCRIBER_SUMMARY",
+//    cron = "0 10/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-group-subscriber-summary.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//
+//
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_A_SUBSCRIBER_SUMMARY",
+//    cron = "0 10/20 * * * ?",
+//    configFile = "/PROD/CONF/IN_ZTE/FT/load-ft-a-subscriber-summary.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 crontasks +=
   {
@@ -142,61 +142,61 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "FT_OG_IC_CALL_SNAPSHOT",
-    cron = "0 10/20 * * * ?",
-    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-og-ic-call-snapshot.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "FT_OG_IC_CALL_SNAPSHOT",
+//    cron = "0 10/20 * * * ?",
+//    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-og-ic-call-snapshot.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 
-crontasks +=
-  {
-    instanceId = "FT_ACCOUNT_ACTIVITY",
-    cron = "0 15/20 0-4 * * ?",
-    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-crontasks +=
-  {
-    instanceId = "FT_ACCOUNT_ACTIVITY1",
-    cron = "0 15/10 5-8 * * ?",
-    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity1.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-crontasks +=
-  {
-    instanceId = "FT_ACCOUNT_ACTIVITY2",
-    cron = "0 15/20 9-23 * * ?",
-    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity2.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "FT_ACCOUNT_ACTIVITY",
+//    cron = "0 15/20 0-4 * * ?",
+//    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//crontasks +=
+//  {
+//    instanceId = "FT_ACCOUNT_ACTIVITY1",
+//    cron = "0 15/10 5-8 * * ?",
+//    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity1.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
+//crontasks +=
+//  {
+//    instanceId = "FT_ACCOUNT_ACTIVITY2",
+//    cron = "0 15/20 9-23 * * ?",
+//    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-ft-account-activity2.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 crontasks +=
