--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -74,7 +74,51 @@ crontasks +=
     configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-subscriber-summary.conf",
     taskType = "BATCH"
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "0 minutes"
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_GROUP_SUBSCRIBER_SUMMARY",
+    cron = "0 10/20 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-group-subscriber-summary.conf",
+    taskType = "BATCH"
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_COMMERCIAL_SUBSCRIB_SUMMARY",
+    cron = "0 10/20 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-commercial-subscrib-summary.conf",
+    taskType = "BATCH"
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
     extraTaskParams : [
       {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
@@ -92,11 +136,11 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_MSC_TRANSACTION",
-    cron = "0 */5 * * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/MSC/load-spark-ft-msc-transaction.conf",
     taskType = "BATCH"
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
+    timeout = "65 minutes"
     extraTaskParams : [
       {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
@@ -114,11 +158,11 @@ crontasks +=
 crontasks +=
 {
 instanceId = "LOAD_SPARK_FT_AG_INTERCO",
-cron = "0 */5 * * * ?",
+cron = "0 34 */1 * * ?",
 configFile = "/PROD/CONF/MSC/load-spark-ft-ag-interco.conf",
 taskType = "BATCH"
 taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-timeout = "60 minutes"
+timeout = "65 minutes"
 extraTaskParams : [
   {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
   , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
@@ -132,6 +176,28 @@ extraTaskParams : [
   , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
 ]
 }
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_X_INTERCO_FINAL",
+    cron = "0 36 */1 * * ?",
+    configFile = "/PROD/CONF/MSC/load-spark-ft-x-interco-final.conf",
+    taskType = "BATCH"
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "65 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
 
 
 //--###**************************************#####---
@@ -159,36 +225,15 @@ crontasks +=
           , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
         ]
   }
-crontasks +=
-  {
-    instanceId = "LOAD_SPARK_FT_X_INTERCO_FINAL",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/MSC/load-spark-ft-x-interco-final.conf",
-    taskType = "BATCH"
-    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
 
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_ACCOUNT_ACTIVITY",
-    cron = "0 */5 * * * ?",
+    cron = "0 15/20 0-4 * * ?",
     configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf",
     taskType = "BATCH"
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
+    timeout = "65 minutes"
     extraTaskParams : [
       {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
       , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
@@ -203,76 +248,55 @@ crontasks +=
     ]
   }
 
-crontasks +=
-  {
-    instanceId = "LOAD_SPARK_FT_ACCOUNT_ACTIVITY",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity.conf",
-    taskType = "BATCH"
-    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
-
-crontasks +=
-  {
-    instanceId = "SPARK_FT_ACCOUNT_ACTIVITY1",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity1.conf",
-    taskType = "BATCH"
-    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
-
-crontasks +=
-  {
-    instanceId = "SPARK_FT_ACCOUNT_ACTIVITY2",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-account-activity2.conf",
-    taskType = "BATCH"
-    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "60 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
-      , {"param" : "--conf spark.network.timeout=360s"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
 crontasks +=
   {
     instanceId = "SPARK_FT_OG_IC_CALL_SNAPSHOT",
-    cron = "0 */5 * * * ?",
+    cron = "0 10/20 * * * ?",
     configFile = "/PROD/CONF/ACCOUNT_ACTIVITY/load-spark-ft-og-ic-call-snapshot.conf",
+    taskType = "BATCH"
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_CONTRACT_SNAPSHOT",
+    cron = "0 10/20 0-4 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/FT/load-spark-ft-contract-snapshot.conf",
+    taskType = "BATCH"
+    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "--master yarn --executor-cores 4 --num-executors 4 --driver-memory 2G --executor-memory 3G"}
+      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
+      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
+      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
+      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
+      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
+      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
+      , {"param" : "--conf spark.executor.heartbeatInterval=60s"}
+      , {"param" : "--conf spark.network.timeout=360s"}
+      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_SPARK_FT_QOS_SPECIAL_NUMBER",
+    cron = "0 11 */1 * * ?",
+    configFile = "/PROD/CONF/MVAS/load-spark-ft-qos-special-number.conf",
     taskType = "BATCH"
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
